samples/_failures_safe/1761800287_801aea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e24e2930.c: In function ‘transpose_matrix’:
./samples/SAFE/__tmp_e24e2930.c:144:9: error: expected identifier or ‘(’ at end of input
  144 |         for (int
      |         ^~~
./samples/SAFE/__tmp_e24e2930.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e24e2930.c:144:9: error: expected declaration or statement at end of input
